# django-bft

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.rst  cronjob  django.Dockerfile  docker-compose.yaml  filecleanup.sh  manage.py  nginx.Dockerfile  nginx.conf  pyproject.toml  requirements.txt  setup.py
bft/: admin.py  app_settings.py  context_processors.py  forms.py  models.py  urls.py  validators.py  views.py
bft/management/commands/: deletetempfiles.py  deleteuploads.py
bft/static/bft/scripts/: bft.js  feedback.js  jquery.MultiFile.js  jquery.blockUI.js  jquery.lightBoxFu.js  jquery.uploadProgress.js
bft/static/bft/styles/: main.css
bft/templates/bft/: 404.html  500.html  about.html  base.html  files.html  index.html  login.html
bft/templates/bft/inc/: bftvars.js  captcha.html  feedback.html  form.html  login.html
bft/utils/: random_pass.py  random_slug.py  upload_handlers.py
djangobft/: asgi.py  bftusu.code-workspace  settings.py  urls.py  wsgi.py
djangobft/bft/: admin.py  app_settings.py  auth.py  context_processors.py  dashboard.py  forms.py  middleware.py  models.py  urls.py  validators.py  views.py
djangobft/bft/docs/: Makefile  make.bat
djangobft/bft/docs/source/: conf.py  index.rst  models.rst  views.rst
djangobft/bft/migrations/: 0001_initial.py
djangobft/bft/templates/: 404.html  500.html  about.html  base.html  files.html  index.html  login.html
djangobft/bft/utils/: json_utils.py  random_slug.py  upload_handlers.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
nginx/: nginx.conf
(+17 files in other folders)
