[tool.poetry]
name = "django-bft-usu"
version = "0.1.0"
description = "BFT for USU"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
python-ldap = "^3.4.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.4.0"
django-extensions = "^3.1.5"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
