[tool.poetry]
name = "django-bft-usu"
version = "0.1.0"
description = "BFT for USU"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
pysaml2 = "^7.4.1"
psycopg2-binary = "^2.9.6"
python-decouple = "^3.8"
python-dotenv = "^1.0.0"
sentry-sdk = {version = "^1.28.1", optional = true}

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.4.0"
django-extensions = "^3.1.5"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
